--- a/services.html
+++ b/services.html
@@ -208,21 +208,27 @@
 </div>
 
                 <!-- Palm Trimming -->
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="350">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906108/IMG_3825.heic_prceeg_kcxvki.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906108/IMG_3825.heic_prceeg_kcxvki.jpg" alt="Palm Tree Trimming in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="scissors" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Palm Trimming</h3>
-                        </div>
-                        <p class="text-gray-600">Professional palm frond removal and shaping for safety, aesthetics, and hurricane prep. We trim dead/dangling fronds and skirt palms cleanly without damage.</p>
-                    </div>
-                </div>
-            </div>
+               <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="350">
+    <picture>
+        <source 
+            srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800,c_fill,ar_4:3/v1758906108/IMG_3825.heic_prceeg_kcxvki.webp" 
+            type="image/webp">
+        <img 
+            src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800,c_fill,ar_4:3/v1758906108/IMG_3825.heic_prceeg_kcxvki.jpg" 
+            alt="Expert Diamond-Cut Palm Trimming in St. Augustine & Jacksonville, FL" 
+            class="w-full h-64 object-cover" 
+            loading="lazy">
+    </picture>
+    <div class="p-6">
+        <div class="flex items-center mb-4">
+            <i data-feather="scissors" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Palm Trimming</h3>
         </div>
+        <p class="text-gray-600">
+            Elevate your landscape with our professional palm trimming services. We remove dead, yellowing, or hazardous fronds, shape your palms for a clean, resort-style appearance, and use premium diamond-cutting techniques for precise, angled cuts that promote healthier growth and a stunning, polished look. Safer trees, better curb appeal, and hurricane-ready palms — all with minimal mess and maximum wow factor.
+        </p>
+    </div>
+</div>
     </section>
 
     <!-- CTA Section -->
@@ -315,6 +321,7 @@
     </script>
 </body>
 </html>
+
 
 
 
