Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <div class="grid grid-cols-3 gap-2">
         <!-- Photo 1: Before -->
         <div class="relative">
-            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_400,c_fill/v1769239536/IMG_2913_hq0zld.heic" 
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/v1769239542/IMG_2897_sqe1mr.heic" 
                  alt="Before: Dirty, stained driveway and exterior in Jacksonville, FL" 
                  class="w-full h-48 object-cover" loading="lazy">
             <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50">
@@ -633,6 +633,7 @@
     </script>
 </body>
 </html>
+
 
 
 
