--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="bg-white rounded-2xl shadow-xl overflow-hidden border border-gray-200" data-aos="fade-up" data-aos-delay="200">
                     <div class="grid grid-cols-3 gap-4 p-4">
                         <div class="relative rounded-lg overflow-hidden border-2 border-gray-200">
-                            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_400,c_fill/v1769239536/IMG_2913_hq0zld.heic"
+                            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/v1769239542/IMG_2897_sqe1mr.heic"
                                  alt="Before: Dirty, stained driveway and exterior in Jacksonville, FL"
                                  class="w-full h-64 object-cover" loading="lazy">
                             <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-40">
@@ -632,6 +632,7 @@
     </script>
 </body>
 </html>
+
 
 
 
