--- a/services.html
+++ b/services.html
@@ -25,11 +25,11 @@
     <style>
         .hero-section {
     background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.45)),
-                url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1920,e_improve/v1769234944/IMG_9542_qfaqm1.jpg');
+                url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1920,c_fill,g_south,e_improve/v1769234944/IMG_9542_qfaqm1.jpg');
     background-size: cover;
-    background-position: center 70%;  /* <-- This shows more of the bottom */
+    background-position: center;
     background-repeat: no-repeat;
-    background-color: #166534; /* Dark green fallback */
+    background-color: #166534;
 }
         .service-card:hover {
             transform: translateY(-10px);
@@ -323,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
