--- a/gallery.html
+++ b/gallery.html
@@ -24,12 +24,13 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <style>
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
-                        url('https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1769243840/IMG_0437_xczi01.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
+    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.45)),
+                url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1920,c_fill,g_south,e_improve/v1769234944/IMG_9542_qfaqm1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #166534;
+}
         img {
             max-width: 100%;
             height: auto;
@@ -631,4 +632,5 @@
     </script>
 </body>
 </html>
+
 
