--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 </div>
             </div>
             <div class="text-center mt-12">
-                <a href="https://g.page/[your-business]/reviews" target="_blank" class="text-green-600 font-medium">Read more reviews on Facebook Marketplace!</a>
+                <a href="https://www.facebook.com/marketplace/profile/100000056725836/?ref=permalink&mibextid=6ojiHh" target="_blank" class="text-green-600 font-medium">Read more reviews on Facebook Marketplace!</a>
             </div>
         </div>
     </section>
@@ -624,6 +624,7 @@
     </script>
 </body>
 </html>
+
 
 
 
