--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
     <style>
         .hero-section {
     background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.45)),
-                url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1920,c_fill,g_south,e_improve/v1769234944/IMG_9542_qfaqm1.jpg');
+                url('https://res.cloudinary.com/dxghmamh0/image/upload/a_-90/a_90/e_improve/v1767067155/IMG_9465_z1ydck.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -323,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
