--- a/index.html
+++ b/index.html
@@ -321,6 +321,30 @@
                     </p>
                 </div>
 
+                <div class="bg-white rounded-2xl shadow-xl overflow-hidden border border-gray-200" data-aos="fade-up" data-aos-delay="100">
+        <div class="grid grid-cols-2 gap-4 p-4">
+            <!-- Before -->
+            <div class="relative rounded-lg overflow-hidden border-2 border-gray-200">
+                <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_gen_remove:prompt_(remove the person from the photo);multiple_true/e_improve/v1767067153/IMG_9341_rtimcr.jpg"
+                     alt="Before: Yard ready for sod installation in Jacksonville, FL"
+                     class="w-full h-80 object-cover" loading="lazy">
+            </div>
+            <!-- After -->
+            <div class="relative rounded-lg overflow-hidden border-2 border-gray-200">
+                <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067154/IMG_9351_fcmxlc.jpg"
+                     alt="After: Lush, freshly installed sod lawn in Jacksonville, FL"
+                     class="w-full h-80 object-cover" loading="lazy">
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 px-4 pb-4 text-center text-xl font-semibold text-gray-800">
+            <div class="bg-gray-100 py-4">Before</div>
+            <div class="bg-green-100 py-4">After</div>
+        </div>
+        <p class="text-center p-6 text-xl font-semibold text-gray-800 bg-gray-50 border-t border-gray-200">
+            Sod Installation – From bare or patchy ground to instant green paradise in one day
+        </p>
+    </div>
+
             <!-- Centered Buttons: View Full Gallery + Visit Instagram -->
 <div class="flex flex-col sm:flex-row justify-center items-center gap-6 mt-12">
     <a href="gallery.html" class="inline-flex items-center justify-center bg-green-600 hover:bg-green-700 text-white px-10 py-5 rounded-lg text-xl font-medium transition duration-300 shadow-md">
@@ -624,6 +648,7 @@
     </script>
 </body>
 </html>
+
 
 
 
