--- a/index.html
+++ b/index.html
@@ -472,9 +472,14 @@
             <p class="text-xl mb-8 max-w-3xl mx-auto" data-aos="fade-up" data-aos-delay="100">Schedule your free sod consultation today.</p>
             <div class="flex flex-col sm:flex-row justify-center gap-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="index.html#contact" class="bg-white hover:bg-gray-100 text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300">Get a Free Quote</a>
-                <a href="tel:+19042742101" class="border-2 border-white hover:bg-white hover:text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300">
-                    <i data-feather="phone" class="inline mr-2"></i> (904) 274-2101
-                </a>
+                <div class="flex flex-col sm:flex-row gap-4" data-aos="fade-up" data-aos-delay="200">
+    <a href="tel:+19042742101" class="border-2 border-white hover:bg-white hover:text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300 text-center">
+        <i data-feather="phone" class="inline mr-2"></i> Call Us
+    </a>
+    <a href="sms:+19042742101&body=Please%20let%20me%20know%20how%20I%20can%20help" class="border-2 border-white hover:bg-white hover:text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300 text-center">
+        <i data-feather="message-circle" class="inline mr-2"></i> Text Us
+    </a>
+</div>
             </div>
         </div>
     </section>
@@ -485,7 +490,7 @@
             <div class="lg:grid lg:grid-cols-2 lg:gap-16">
                 <div class="mb-12 lg:mb-0" data-aos="fade-right">
                     <h2 class="text-3xl font-bold text-gray-900 mb-6">Request a Consultation</h2>
-                    <p class="text-lg text-gray-600 mb-8">Complete the form to schedule your free sod installation consultation. We'll assess your property and recommend the best lawn solution.</p>
+<p class="text-gray-600">Phone: <a href="sms:+19042742101&body=Please%20let%20me%20know%20how%20I%20can%20help" class="text-green-600 hover:underline">(904) 274-2101</a><br>Email: <a href="mailto:John@SodGuyJax.com" class="text-green-600 hover:underline">John@SodGuyJax.com</a></p>
                     <div class="space-y-6">
                         <div class="flex items-start">
                             <div class="flex-shrink-0">
@@ -598,10 +603,10 @@
                             <i data-feather="phone" class="h-5 w-5 text-gray-400 mr-2"></i>
                             <a href="tel:+19042742101" class="text-gray-400 hover:text-white">(904) 274-2101</a>
                         </li>
-                        <li class="flex items-center">
-                            <i data-feather="mail" class="h-5 w-5 text-gray-400 mr-2"></i>
-                            <a href="mailto:John@SodGuyJax.com" class="text-gray-400 hover:text-white">John@SodGuyJax.com</a>
-                        </li>
+                       <li class="flex items-center">
+    <i data-feather="phone" class="h-5 w-5 text-gray-400 mr-2"></i>
+    <a href="sms:+19042742101&body=Please%20let%20me%20know%20how%20I%20can%20help" class="text-gray-400 hover:text-white">(904) 274-2101</a>
+</li>
                     </ul>
                 </div>
             </div>
@@ -672,6 +677,7 @@
     </script>
 </body>
 </html>
+
 
 
 
